--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".MapFragment">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MapFragment">
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/map"
@@ -16,15 +15,29 @@
             android:layout_height="match_parent"
             tools:context=".MapFragment" />
 
+        <Button
+            android:id="@+id/button"
+            android:layout_width="36dp"
+            android:layout_height="40dp"
+            android:layout_marginEnd="45dp"
+            android:layout_marginBottom="40dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
         <com.example.practiceproject.VerticalSeekBar
-            android:id="@+id/seekBar4"
+            android:id="@+id/verticalSeekBar"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="30dp"
+            android:layout_height="450dp"
+            android:layout_marginEnd="55dp"
+            android:layout_marginBottom="70dp"
             android:scrollbars="vertical"
             android:textAlignment="inherit"
             android:textDirection="inherit"
+            android:max="210"
+            android:min="20"
+            android:progress="70"
             android:verticalScrollbarPosition="defaultPosition"
-            app:layout_constraintEnd_toEndOf="@+id/map" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
