--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,41 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapFragment">
+    tools:context=".map.MapFragment">
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".MapFragment" />
+            tools:context=".map.MapFragment" />
 
         <Button
             android:id="@+id/button"
-            android:layout_width="36dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="45dp"
-            android:layout_marginBottom="40dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="30dp"
+            android:contentDescription="@string/button_text"
+            app:icon="@android:drawable/ic_menu_zoom"
+            app:iconGravity="top"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <com.example.practiceproject.VerticalSeekBar
+        <com.example.practiceproject.map.VerticalSeekBar
             android:id="@+id/verticalSeekBar"
             android:layout_width="wrap_content"
             android:layout_height="450dp"
             android:layout_marginEnd="55dp"
-            android:layout_marginBottom="70dp"
-            android:scrollbars="vertical"
-            android:textAlignment="inherit"
-            android:textDirection="inherit"
+            android:layout_marginBottom="50dp"
             android:max="210"
             android:min="20"
             android:progress="70"
+            android:scrollbars="vertical"
+            android:textAlignment="inherit"
+            android:textDirection="inherit"
             android:verticalScrollbarPosition="defaultPosition"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
