Added ViewPager2 and TabLayout for "Places" page

--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/menu_stations"
-        android:title="@string/stations" />
+        android:id="@+id/menu_places"
+        android:title="@string/places" />
 
     <item
         android:id="@+id/menu_map"
