--- a/app/src/main/res/layout/fragment_metro_stations.xml
+++ b/app/src/main/res/layout/fragment_metro_stations.xml
@@ -3,7 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MetroStations">
+    tools:context=".viewpager.MetroStations">
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
