Fixed bug with permissions, added Room and implemented logic for Sights. Rearranged classes and packages

--- a/app/src/main/res/layout/fragment_sight.xml
+++ b/app/src/main/res/layout/fragment_sight.xml
@@ -3,12 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".viewpager.SightFragment">
+    tools:context=".ui.viewpager.SightFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/sight" />
+        android:layout_height="match_parent">
+
+        <ScrollView
+            android:id="@+id/sights"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/sightsList">
+
+            <LinearLayout
+                android:id="@+id/sightsList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/sight"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sightsList" />
+
+            </LinearLayout>
+
+        </ScrollView>
+
+        <include layout="@layout/bottom_sheet"/>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </FrameLayout>
