--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".map.MapFragment">
+    tools:context=".ui.map.MapFragment">
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/map"
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".map.MapFragment" />
+            tools:context=".ui.map.MapFragment" />
 
         <Button
             android:id="@+id/button"
@@ -25,7 +25,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-        <com.example.practiceproject.map.VerticalSeekBar
+        <com.example.practiceproject.ui.map.VerticalSeekBar
             android:id="@+id/verticalSeekBar"
             android:layout_width="wrap_content"
             android:layout_height="450dp"
