--- a/app/src/main/res/layout/fragment_metro_stations.xml
+++ b/app/src/main/res/layout/fragment_metro_stations.xml
@@ -3,11 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".viewpager.StationsFragment">
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    tools:context=".ui.viewpager.StationsFragment">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
